UPDATE : 예약 완료 화면 애니메이션 구현

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
             />
 
         <Button
+            android:id="@+id/reservResultBtn"
             android:layout_width="23.5dp"
             android:layout_height="19.5dp"
             android:layout_gravity="right|center"
