--- a/app/src/main/res/layout/fragment_reserv.xml
+++ b/app/src/main/res/layout/fragment_reserv.xml
@@ -60,7 +60,86 @@
                 </LinearLayout>
             </LinearLayout>
             <!-- LAYOUT END 공지사항 레이아웃 -->
+
+
         </androidx.cardview.widget.CardView>
+
+        <!-- LAYOUT 콘텐츠 레이아웃 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp">
+            <!-- LAYOUT 실습실 좌석 현황 레이아웃 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <!-- LAYOUT 실습실 좌석 현황 텍스트 레이아웃 -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_regular"
+                            android:text="2022-09-15"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/noto_sans_kr_bold"
+                            android:includeFontPadding="false"
+                            android:text="실습실 예약"
+                            android:textColor="@color/natural_navy"
+                            android:textSize="20dp" />
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:layout_marginTop="15dp"
+                            android:background="@color/gray" />
+                    </LinearLayout>
+                </LinearLayout>
+                <!-- LAYOUT END 실습실 좌석 현황 텍스트 레이아웃 -->
+
+                <include
+                    android:id="@+id/seatGridView"
+                    layout="@layout/sub_seat_gridview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="이용 시간"
+                    android:textColor="@color/natural_navy"
+                    android:textSize="14dp"
+                    android:fontFamily="@font/noto_sans_kr_regular"
+                    android:includeFontPadding="false"
+                    />
+
+            </LinearLayout>
+            <!-- LAYOUT END 실습실 좌석 현황 레이아웃 -->
+
+
+
+        </LinearLayout>
+        <!-- LAYOUT END 콘텐츠 레이아웃 -->
+
     </LinearLayout>
 </layout>
 
