--- a/app/src/main/res/layout/spinner_item_team.xml
+++ b/app/src/main/res/layout/spinner_item_team.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="1"
+    android:textSize="16dp"
+    android:textColor="@color/black_gray"
+    android:fontFamily="@font/noto_sans_kr_regular"
+    android:includeFontPadding="false"
+    android:gravity="left"/>
