--- a/app/src/main/res/layout/sub_seat_gridview.xml
+++ b/app/src/main/res/layout/sub_seat_gridview.xml
@@ -49,6 +49,7 @@
 
 
             <TextView
+                android:id="@+id/lab_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -59,6 +60,7 @@
                 android:textSize="16dp" />
 
             <TextView
+                android:id="@+id/todayTimeTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -139,8 +141,11 @@
         <!-- LAYOUT END 실습실 좌석 현황 레이아웃 -->
 
     <FrameLayout
+        android:id="@+id/blurFrameLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        >
 
         <com.github.mmin18.widget.RealtimeBlurView
             android:id="@+id/blurView"
